<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/title_notifications"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/navigation_mydeal"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/title_mydeal"/>
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search"/>
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account"
        android:title="@string/title_account" />
</menu>
